welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:5: error: missing arguments for method abs in object Math;
follow this method with `_' if you want to treat it as a partially applied function
	else if (Math.abs(a-10)=Math.abs(b-10)) {
                      ^close10:5: error: type mismatch;
 found   : Unit
 required: Int
	else if (Math.abs(a-10)=Math.abs(b-10)) {
             ^